sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:18: error: illegal start of simple expression
	}
        ^AlgCocktailSort1:20: error: 'while' expected but '}' found.
}
^